--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,6 +74,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
   min-height: 100vh;
+  padding-top: 4.5rem; /* Account for fixed banner height */
 }
 
 * {
